<?xml version="1.0" encoding="utf-8"?>

<!--original vertical linear layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.csaper6.quizapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_cats"
        android:id="@+id/textview_question" />

    <!--horizontal linear layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trueButton"
            android:text="@string/trueButton_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/falseButton"
            android:text="@string/falseButton_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previousButton"
        android:text="@string/previousButton_text"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
        android:drawablePadding="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextButton"
        android:text="@string/nextButton_text"
        android:layout_gravity="center_horizontal"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:drawablePadding="4dp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cheat"
        android:id="@+id/button_cheat"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreText"
        android:id="@+id/textview_score" />

</LinearLayout>
